# UHR-BAT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: evaluate.py  prepare_uhrbat_sft.py
uhr_bat/: __init__.py  infer.py  lmms_eval_manifest.py  lmms_eval_model.py
with-SAM/longva/: README.md
with-SAM/longva/longva/: utils.py
with-SAM/longva/longva/model/: builder.py  consolidate.py  llava_arch.py  regproxy.py
with-SAM/longva/longva/model/language_model/: llava_llama.py  llava_mistral.py  llava_qwen.py
with-SAM/longva/longva/model/multimodal_encoder/: clip_encoder.py
with-SAM/longva/longva/model/multimodal_projector/: pooler_projector.py
with-SAM/longva/longva/model/multimodal_resampler/: masked_drop.py  qformer.py  spatial_pool.py
with-SAM/longva/longva/train/: llava_trainer.py  train.py
with-SAM/longva/scripts/: build_multiscale_token_masks.py  eval_category_accuracy.py  eval_mme_remote_sensing_multiscale.py  eval_xlrs_multiscale_to_json.py  ft3_selected.sh  zero2.json  zero3_offload.json
with_k-means/longva/: README.md
with_k-means/longva/longva/: __init__.py  conversation.py  mm_utils.py  sam_pruning.py
with_k-means/longva/longva/model/: apply_delta.py  llava_arch.py  make_delta.py
with_k-means/longva/longva/model/language_model/: llava_mpt.py  modeling_llama.py
with_k-means/longva/longva/model/multimodal_encoder/: builder.py  clip_encoder.py
with_k-means/longva/longva/model/multimodal_projector/: builder.py
with_k-means/longva/longva/model/multimodal_resampler/: perceiver.py  qformer.py
with_k-means/longva/longva/train/: llama_flash_attn_monkey_patch.py  train.py  train_dpo.py  train_mem.py
with_k-means/longva/scripts/: build_multiscale_tile_masks.py  eval_mme_remote_sensing_multiscale.py  eval_xlrs_multiscale_to_json.py  ft3_selected.sh  zero2_tp2.json
